<resources>
    <string name="app_name">Calculator</string>
    <string name="ce">CE</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_4">4</string>
    <string name="rest">-</string>
    <string name="x">x</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="divi">÷</string>
    <string name="mgs_error">Invalid Expression</string>
</resources>