<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:orientation="vertical"
    tools:context=".mainModul.view.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swDarkMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start" />

        <ImageButton
            android:id="@+id/showSheetBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginHorizontal="15dp"
            android:background="@color/transparente"
            android:src="@drawable/ic_history" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_expression"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:ellipsize="start"
        android:gravity="end|center_vertical"
        android:paddingHorizontal="30dp"
        android:singleLine="true"
        android:textColor="@color/black_sim_txt"
        android:textSize="50sp"
        tools:text="12+2"/>


    <TextView
        android:id="@+id/tv_Result"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:ellipsize="end"
        android:gravity="end|center_vertical"
        android:maxLines="1"
        android:paddingHorizontal="30dp"
        android:textColor="@color/black_sim_txt"
        android:textSize="40sp"
        tools:text="12" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        android:paddingVertical="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_clear"
                style="@style/OperationButtonStyle"
                android:text="@string/ce" />

            <TextView
                android:id="@+id/tv_open"
                style="@style/OperationButtonStyle"
                android:text="(" />

            <TextView
                android:id="@+id/tv_close"
                style="@style/OperationButtonStyle"
                android:text=")" />

            <TextView
                android:id="@+id/tv_divide"
                style="@style/OperationButtonStyle"
                android:text="@string/divi" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_seven"
                style="@style/NumberButtonStyle"
                android:text="7" />

            <TextView
                android:id="@+id/tv_eight"
                style="@style/NumberButtonStyle"
                android:text="8" />

            <TextView
                android:id="@+id/tv_nine"
                style="@style/NumberButtonStyle"
                android:text="9" />

            <TextView
                android:id="@+id/tv_plus"
                style="@style/OperationButtonStyle"
                android:text="+" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_four"
                style="@style/NumberButtonStyle"
                android:text="@string/_4" />

            <TextView
                android:id="@+id/tv_five"
                style="@style/NumberButtonStyle"
                android:text="@string/_5" />

            <TextView
                android:id="@+id/tv_six"
                style="@style/NumberButtonStyle"
                android:text="@string/_6" />

            <TextView
                android:id="@+id/tv_min"
                style="@style/OperationButtonStyle"
                android:text="@string/rest" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_one"
                style="@style/NumberButtonStyle"
                android:text="@string/_1" />

            <TextView
                android:id="@+id/tv_two"
                style="@style/NumberButtonStyle"
                android:text="@string/_2" />

            <TextView
                android:id="@+id/tv_three"
                style="@style/NumberButtonStyle"
                android:text="@string/_3" />

            <TextView
                android:id="@+id/tv_mult"
                style="@style/OperationButtonStyle"
                android:text="@string/x" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dot"
                style="@style/NumberButtonBottom"
                android:text="." />

            <TextView
                android:id="@+id/tv_zero"
                style="@style/NumberButtonBottom"
                android:text="0" />

            <TextView
                android:id="@+id/tv_pii"
                style="@style/NumberButtonBottom"
                android:text="π" />

            <TextView
                android:id="@+id/tv_back"
                style="@style/NumberButtonBottom"
                android:scaleType="center"
                android:textSize="30dp"
                android:text="«" />

            <TextView
                android:id="@+id/tv_equal"
                style="@style/EqualButtonStyle"

                android:text="=" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>


